--- a/scss/helpers/_functions.scss
+++ b/scss/helpers/_functions.scss
@@ -3,15 +3,15 @@
 // foundation.zurb.com
 // Licensed under MIT Open Source
 
-/**
- *   Exports
- *   Outputs the chunk of content passed if component $name hasn't yet been output.
- *   This prevents code duplication by keeping track of which components have already been output.
- *
- *   @param {string} $name - Name of component to output
- *
- *   @output The content passed, if the component has not yet been referenced.
- */
+//
+//   Exports
+//   Outputs the chunk of content passed if component $name hasn't yet been output.
+//   This prevents code duplication by keeping track of which components have already been output.
+//
+//   @param {string} $name - Name of component to output
+//
+//   @output The content passed, if the component has not yet been referenced.
+//
 $modules: () !default;
 @mixin exports($name) {
   // Import from global scope
@@ -32,15 +32,15 @@ $modules: () !default;
   }
 }
 
-/**
- *
- *   Map Serialize
- *   Convert a map to JSON. Don't you even try to get fancy with this just yet.
- *
- *   @param {map} $map - Map to convert.
- *
- *   @return A string with a map converted to JSON.
- */
+//
+//
+//   Map Serialize
+//   Convert a map to JSON. Don't you even try to get fancy with this just yet.
+//
+//   @param {map} $map - Map to convert.
+//
+//   @return A string with a map converted to JSON.
+//
 @function map-serialize($map) {
   $str: '{';
   @each $key, $value in $map {
@@ -51,16 +51,16 @@ $modules: () !default;
   @return $str;
 }
 
-/**
- *   Map Next
- *   Find the next key in a map.
- *
- *   @param {map} $map - Map to traverse.
- *   @param {mixed} $key - Key to use as a starting point.
- *
- *   @return The value for the key after $key if $key was found. If $key was not found, or $key was
- *     the last value in the map, returns null.
- */
+//
+//   Map Next
+//   Find the next key in a map.
+//
+//   @param {map} $map - Map to traverse.
+//   @param {mixed} $key - Key to use as a starting point.
+//
+//   @return The value for the key after $key if $key was found. If $key was not found, or $key was
+//     the last value in the map, returns null.
+//
 @function map-next($map, $key) {
   // Store the values of the map as a list, so we can access them with nth
   $values: map-values($map);
@@ -87,19 +87,19 @@ $modules: () !default;
   }
 }
 
-/**
- *   Is It Light?
- *   Checks the lightness of $color, and if it passes the $threshold of lightness, it returns the $yes color.
- *   Otherwise, it returns the $no color. Use this function to dynamically output a foreground color based on
- *   a given background color.
- *
- *   @param {color} $color - Color to check the lightness of.
- *   @param {color} $yes - Color to return if $color is light.
- *   @param {color} $no - Color to return if $color is dark.
- *   @param {percentage} $threshold - Threshold of lightness to check against.
- *
- *   @return The $yes color or $no color.
- */
+//
+//   Is It Light?
+//   Checks the lightness of $color, and if it passes the $threshold of lightness, it returns the $yes color.
+//   Otherwise, it returns the $no color. Use this function to dynamically output a foreground color based on
+//   a given background color.
+//
+//   @param {color} $color - Color to check the lightness of.
+//   @param {color} $yes - Color to return if $color is light.
+//   @param {color} $no - Color to return if $color is dark.
+//   @param {percentage} $threshold - Threshold of lightness to check against.
+//
+//   @return The $yes color or $no color.
+//
 @function isitlight($color, $yes: #000, $no: #fff, $threshold: 60%) {
   @if (lightness($color) > $threshold) {
     @return $yes;
@@ -109,17 +109,17 @@ $modules: () !default;
   }
 }
 
-/**
- *   Smart Scale
- *   Scales a color to be lighter if it's light, or darker if it's dark.
- *   Use this function to "fade" a color appropriate to its lightness.
- *
- *   @param {color} $color - Color to scale.
- *   @param {percentage} $scale - Amount to scale up or down.
- *   @param {percentage} $threshold - Threshold of lightness to check against.
- *
- *   @return A scaled color.
- */
+//
+//   Smart Scale
+//   Scales a color to be lighter if it's light, or darker if it's dark.
+//   Use this function to "fade" a color appropriate to its lightness.
+//
+//   @param {color} $color - Color to scale.
+//   @param {percentage} $scale - Amount to scale up or down.
+//   @param {percentage} $threshold - Threshold of lightness to check against.
+//
+//   @return A scaled color.
+//
 @function smartscale($color, $scale: 5%, $threshold: 60%) {
   @if lightness($color) > $threshold {
     $scale: -$scale;
@@ -127,15 +127,15 @@ $modules: () !default;
   @return scale-color($color, $lightness: $scale);
 }
 
-/**
- *   Has Value
- *   Returns true if a value is not 0, null, or none.
- *   Use this function to check for values like border: 0 or box-shadow: none.
- *
- *   @param $val - Value to check.
- *
- *   @return True if $val is not 0, null, or none.
- */
+//
+//   Has Value
+//   Returns true if a value is not 0, null, or none.
+//   Use this function to check for values like border: 0 or box-shadow: none.
+//
+//   @param $val - Value to check.
+//
+//   @return True if $val is not 0, null, or none.
+//
 @function hasvalue($val) {
   @if $val == null or $val == none {
     @return false;
@@ -146,16 +146,16 @@ $modules: () !default;
   @return true;
 }
 
-/**
- *   Get Side
- *   Determine a top/right/bottom/right value on a padding, margin, etc. property, no matter how many values were passed in.
- *   Use this function if you need to know the specific side of a value, but don't know if the value is using shorthand.
- *
- *   @param {list|number} $val - Value to analyze. Should be a shorthand sizing property, e.g. "1em 2em 1em"
- *   @param {keyword} $side - Side to return. Should be top, right, bottom, or left.
- *
- *   @return A single value based on $val and $side.
- */
+//
+//   Get Side
+//   Determine a top/right/bottom/right value on a padding, margin, etc. property, no matter how many values were passed in.
+//   Use this function if you need to know the specific side of a value, but don't know if the value is using shorthand.
+//
+//   @param {list|number} $val - Value to analyze. Should be a shorthand sizing property, e.g. "1em 2em 1em"
+//   @param {keyword} $side - Side to return. Should be top, right, bottom, or left.
+//
+//   @return A single value based on $val and $side.
+//
 @function get-side($val, $side) {
   $length: length($val);
 
@@ -188,17 +188,17 @@ $modules: () !default;
   }
 }
 
-/**
- *   Get Border Value
- *   Given border $val, find a specific element of the border, which is $elem.
- *   Possible values for $elem are width, style, and color.
- *
- *   @param {list} $val - Border value to find a value in.
- *   @param {keyword} $elem - Border component to extract.
- *
- *   @param If the value exists, returns the value. If the value is not in the border definition,
- *     the function will return a 0px width, solid style, or black border.
- */
+//
+//   Get Border Value
+//   Given border $val, find a specific element of the border, which is $elem.
+//   Possible values for $elem are width, style, and color.
+//
+//   @param {list} $val - Border value to find a value in.
+//   @param {keyword} $elem - Border component to extract.
+//
+//   @param If the value exists, returns the value. If the value is not in the border definition,
+//     the function will return a 0px width, solid style, or black border.
+//
  @function get-border-value($val, $elem) {
    // Find the width, style, or color and return it
    @each $v in $val {
@@ -223,17 +223,17 @@ $modules: () !default;
    @return map-get($defaults, $elem);
  }
 
-/**
- *   Get Shadow Value
- *   Given shadow value $val, find a specific element of the shadow, which is $elem.
- *   Possible values for $elem are x, y, size, spread, color, and offset.
- *
- *   @param {list} $val - Shadow value to find a value in.
- *   @param {keyword} $elem - Shadow component to extract.
- *
- *   @return If the value exists, returns the value. If the value is not set, returns false.
- *     If $elem is "inset", returns true, otherwise false.
-**/
+//
+//   Get Shadow Value
+//   Given shadow value $val, find a specific element of the shadow, which is $elem.
+//   Possible values for $elem are x, y, size, spread, color, and offset.
+//
+//   @param {list} $val - Shadow value to find a value in.
+//   @param {keyword} $elem - Shadow component to extract.
+//
+//   @return If the value exists, returns the value. If the value is not set, returns false.
+//     If $elem is "inset", returns true, otherwise false.
+//
 @function get-shadow-value($val, $elem) {
   // Return "none" if there's no shadow
   @if $val == none {
@@ -297,14 +297,14 @@ $modules: () !default;
   }
 }
 
-/**
- *   Strip Unit
- *   Removes the unit (e.g. px, em, rem) from a value, returning the number only.
- *
- *   @param {number} $num - Number to strip unit from.
- *
- *   @return The same number, sans unit.
- */
+//
+//   Strip Unit
+//   Removes the unit (e.g. px, em, rem) from a value, returning the number only.
+//
+//   @param {number} $num - Number to strip unit from.
+//
+//   @return The same number, sans unit.
+//
 @function strip-unit($num) {
   @return $num / ($num * 0 + 1);
 }
