Begin refactoring exports mixin to use two separate functions

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -45,7 +45,7 @@ $include-css: (
   extras: true,
   forms: true,
   grid: true,
-  iconic: true,
+  iconic: false,
   label: true,
   badge: true,
   list: true,
