--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -71,7 +71,7 @@ $include-html-classes: true !default;
 $include-print-styles: true !default;
 $include-html-global-classes: $include-html-classes !default;
 
-@include exports("global") {
+@include exports(global) {
 
   @if $include-html-global-classes {
 
