--- a/scss/helpers/_functions.scss
+++ b/scss/helpers/_functions.scss
@@ -17,6 +17,18 @@
   }
 }
 
+@function imported($name) {
+  // Import from global scope
+  $modules: $modules !global;
+  // Check if the module is already on the imported list
+  @if type-of(index($modules, $name)) == 'number' {
+    @return true;
+  }
+  @else {
+    @return false;
+  }
+}
+
 /**
  *   Exports
  *   Outputs the chunk of content passed if component $name hasn't yet been output.
@@ -28,18 +40,12 @@
  */
 $modules: () !default;
 @mixin exports($name) {
-  // Import from global scope
-  $include-css: $include-css !global;
   // Check if the module has already been imported
-  $module-index: index($modules, $name);
-  @if (($module-index == null) or ($module-index == false)) {
-    // Check if it's on the Foundation export list
-    $module-key: map-get($include-css, $name);
-    // If $module-key is true, then the value is on the list and set to be exported
-    // if $module-key is false, then the value is on the list and set to NOT be exported
-    // If $module-key is null, then the value is not on the list, which means someone
-    // is using it with a custom component, so just export it anyway
-    @if $module-key == true or $module-key == null {
+  @if not imported($name) {
+    @debug "#{$name} has not yet been imported.";
+    // Check if the module should be used
+    @if using($name) {
+      @debug "#{$name} is being used.";
       $modules: append($modules, $name) !global;
       @content;
     }
