--- a/scss/helpers/_breakpoints.scss
+++ b/scss/helpers/_breakpoints.scss
@@ -59,7 +59,12 @@ $breakpoint-classes: (small medium large) !default;
     @if type-of($bp) == 'string' {
       @if map-has-key($breakpoints, $bp) {
         @if $dir == 'only' {
-          $bpMax: map-next($breakpoints, $bp) - (1/16);
+          @if map-next($breakpoints, $bp) == null {
+            $bpMax: null;
+          }
+          @else {
+            $bpMax: map-next($breakpoints, $bp) - (1/16);
+          }
         }
         $bp: map-get($breakpoints, $bp);
         $named: true;
@@ -81,7 +86,10 @@ $breakpoint-classes: (small medium large) !default;
       // And lo, a media query was born
       @if $dir == 'only' {
         @if $named == true {
-          $str: $str + ' and (min-width: #{$bp}) and (max-width: #{$bpMax})';
+          $str: $str + ' and (min-width: #{$bp})';
+          @if $bpMax != null {
+            $str: $str + ' and (max-width: #{$bpMax})';
+          }
         }
         @else {
           @debug 'ERROR: Only named media queries can have an "only" range.';
